WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81385
[V8] Ensure that invalid syntax in inline event handlers does not cause a crash
https://bugs.webkit.org/show_bug.cgi?id=81385
Summary
[V8] Ensure that invalid syntax in inline event handlers does not cause a crash
Erik Arvidsson
Reported
2012-03-16 12:03:45 PDT
[V8] Ensure that invalid syntax in inline event handlers does not cause a crash
Attachments
Patch
(4.62 KB, patch)
2012-03-16 12:07 PDT
,
Erik Arvidsson
japhet
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Erik Arvidsson
Comment 1
2012-03-16 12:07:47 PDT
Created
attachment 132341
[details]
Patch
Erik Arvidsson
Comment 2
2012-03-16 12:23:23 PDT
Committed
r111043
: <
http://trac.webkit.org/changeset/111043
>
Erik Arvidsson
Comment 3
2012-06-14 16:07:44 PDT
***
Bug 81384
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug