[V8] Ensure that invalid syntax in inline event handlers does not cause a crash https://bugs.webkit.org/show_bug.cgi?id=81385

Reviewed by Nate Chapin.

Source/WebCore:

The way that V8 does its inline event handler involves concatting strings and
if the attribute value is crafted in a special way this could cause a crash.

Test: fast/dom/inline-event-attributes-crash.html

* bindings/v8/V8LazyEventListener.cpp:
(WebCore::V8LazyEventListener::prepareListenerObject):

LayoutTests:

* fast/dom/inline-event-attributes-crash-expected.txt: Added.
* fast/dom/inline-event-attributes-crash.html: Added.

Canonical link: https://commits.webkit.org/98599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111043 268f45cc-cd09-0410-ab3c-d52691b4dbfc